spikes/deploy-pymetric/pymetric-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pymetric-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pymetric-vs
spec:
  hosts:
  - "*"
  gateways:
  - pymetric-gateway
  http:
  - match:
    - uri:
        exact: /pymetric
    route:
    - destination:
        host: pymetric
        port:
          number: 32888
